horizontal scroll::TO FIX

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -249,3 +249,10 @@ h2 a {
   font-size: 0.7rem;
   opacity: 0.8;
 }
+
+.scrolling-wrapper {
+  overflow-x: scroll;
+}
+.scrolling-wrapper::-webkit-scrollbar {
+  display: none;
+}
